2007-01-03  Hans Breuer  <hans@breuer.org>

	* app/interface.c : refined the zooms-list drop-down to include
	800%, stay symmetric and not have more than seven entries. 
	Fixes bug #328596

	* lib/makefile.msc : enable strict checking again 
	(-FImsvc_recommended_pragmas.h) to enforce e.g. matching pointers
	at compile time
	* lib/textline.h : RenderCacheFreeFunc is only taking a pointer,
	not a pointer to a pointer and we dont need a pointer to the 
	function pointer in the struct
	
	* objects/UML/constraint.c objects/UML/implements.c 
	  objects/UML/message.c objects/Jackson/phenomenon.c
	  objects/KAOS/metaandorrel.c : move_handle() method needs to call 
	connection_adjust_for_autogap() after connection_move_handle() because 
	the endpoints used for relative text movement need adjustment after 
	possible autogap correction. Fixes bug #362254.

2007-01-02  Hans Breuer  <hans@breuer.org>

	* *.msc, *.win32, HACKING, *.nsh, *.am, 
	  *.xbm, *.xpm; *.shape, *.sheet : setting svn:eol-style=native

	* lib/diagdkrenderer.c : avoid leaks in rounded rectangles,
	bug #358171, Michael Duelli

2006-12-13  Lars Clausen  <lars@raeder.dk>

	* Makefile.am (core-translation-report): Clean up after
	po-checktrans copying.

	* lib/plug-ins.h (DIA_PLUGIN_API_VERSION): Updated due to changes.

	* NEWS: 
	* configure.in: 
	* config.h.win32: 
	* doc/en/dia.xml: 
	* doc/pl/dia.xml: 
	* doc/eu/dia.xml: Updated to version 0.96-pre1

	* plug-ins/vdx/Makefile.am (libvdx_filter_la_SOURCES): Added
	visio-types.h 

	* po/POTFILES.in: Removed EML.sheet.in.

2006-12-09  Lars Clausen  <lars@raeder.dk>

	* app/diapsft2renderer.c (ANNOYING_SCALE_FACTOR): Recalculated the
	existing random scale factor to work with text_line, removed some
	old cruft, and switched to using the new adjustment.  This fixes,
	though in a not-well-understood way, bug #384007.

	* app/Makefile.am: Make it possible to compile without freetype by
	excluding freetype files.
